--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Гульмира Жанабекова | Эксперт Массажа</title>
+    <title>Aru-Ana | Профессиональный массаж Гульмиры Жанабековой</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <nav>
-    <a href="index.html" class="logo">G.ZHANABEKOVA</a>
+    <a href="index.html" class="logo">ARU-ANA</a>
     <ul class="nav-links">
         <li><a href="#about">Опыт мастера</a></li>
         <li><a href="#services">Услуги</a></li>
         <li><a href="#reviews">Отзывы</a></li>
-        <li><a href="#contact">Контакты</a></li>
         <li><a href="#booking" class="nav-booking-btn">Запись</a></li>
     </ul>
     <div class="burger">
@@ -23,79 +22,87 @@
     </div>
 </nav>
 
-<header class="hero" style="height: 90vh; background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1519823551278-64ac92734fb1?q=80&w=2070') center/cover; display: flex; align-items: center; justify-content: center; color: white;">
+<header class="hero" style="height: 100vh; background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1544161515-4ae6ce6ea858?auto=format&fit=crop&q=80') center/cover no-repeat; display: flex; align-items: center; justify-content: center;">
     <div style="text-align: center;">
-        <h1 style="color: white; font-size: 4rem; margin-bottom: 20px;">Гульмира Жанабекова</h1>
-        <p style="font-size: 1.6rem; letter-spacing: 4px; font-weight: 300;">ПРОФЕССИОНАЛЬНЫЙ МЕДИЦИНСКИЙ МАССАЖ</p>
+        <h1 style="color: white; font-size: clamp(3rem, 10vw, 5rem); margin-bottom: 10px; font-family: 'Playfair Display', serif;">ARU-ANA</h1>
+        <p style="color: white; font-size: 1.2rem; letter-spacing: 5px; font-weight: 300; text-transform: uppercase;">Гульмира Жанабекова</p>
     </div>
 </header>
 
-<section id="about">
+<section id="about" style="padding: 100px 8%;">
     <h2>Опыт мастера</h2>
     <div class="grid">
         <div class="info-block">
-            <h3>20 лет практики</h3>
-            <p>Дипломированный фельдшер. Более 6 лет опыта в экстренной медицине (скорая помощь ГССМП). Этот опыт позволяет проводить массаж с глубоким пониманием анатомии и физиологии каждого пациента.</p>
+            <h3>20+ лет опыта</h3>
+            <p>Глубокие медицинские знания и колоссальный практический стаж. Индивидуальный подход к каждому пациенту и работа на реальный результат.</p>
         </div>
         <div class="info-block">
-            <h3>Квалификация</h3>
-            <p>Сочетание классической медицинской школы и передовых мировых техник. Я помогаю не просто расслабиться, а решить конкретные проблемы со здоровьем и самочувствием.</p>
+            <h3>Профессионализм</h3>
+            <p>Дипломированный специалист. Владение сложнейшими техниками лечебного, реабилитационного и эстетического массажа.</p>
+        </div>
+        <div class="info-block">
+            <h3>Методика</h3>
+            <p>Сочетание классической школы и современных оздоровительных практик для быстрого восстановления вашего здоровья.</p>
         </div>
     </div>
 </section>
 
 <section id="services">
-    <h2>Услуги</h2>
+    <h2>Наши услуги</h2>
     <div class="grid">
-        <div class="info-block"><strong>Массаж 5 Континентов</strong><p>Элитная процедура для полной перезагрузки организма.</p></div>
-        <div class="info-block"><strong>Скульптурный массаж лица</strong><p>Ручная пластика и лифтинг-эффект без инъекций.</p></div>
-        <div class="info-block"><strong>Лечебный массаж</strong><p>Устранение болей в спине, шее и пояснице.</p></div>
-        <div class="info-block"><strong>Детский массаж (0+)</strong><p>Профилактика и реабилитация детей любого возраста.</p></div>
+        <div class="info-block"><h3>1)Детский общий массаж (0-5 лет)</h3><p><strong>60.000 тг | 10 сеансов</strong><br>Профессиональная помощь в развитии моторики, укрепление костно-мышечного аппарата малыша.</p></div>
+        <div class="info-block"><h3>2)Детский общий массаж (5-10 лет)</h3><p><strong>80.000 тг | 10 сеансов</strong><br>Снятие тонуса, профилактика нарушений осанки и поддержка здоровья школьника.</p></div>
+        <div class="info-block"><h3>3)Детский общий массаж (10-15 лет)</h3><p><strong>100.000 тг | 10 сеансов</strong><br>Коррекция осанки и укрепление мышечного корсета в период интенсивного роста.</p></div>
+        <div class="info-block"><h3>4)Детский общий массаж (15-18 лет)</h3><p><strong>150.000 тг | 10 сеансов</strong><br>Глубокая проработка мышц спины, снятие учебного стресса и зажимов.</p></div>
+        <div class="info-block"><h3>5)Женский общий массаж</h3><p><strong>180.000 тг | 10 сеансов</strong><br>90 минут полного оздоровления: лимфодренаж, снятие отеков и глубокое расслабление.</p></div>
+        <div class="info-block"><h3>6)Мужской общий массаж</h3><p><strong>220.000 тг | 10 сеансов</strong><br>Силовая техника для проработки глубоких мышц, снятия триггеров и усталости.</p></div>
+        <div class="info-block"><h3>7)ШВЗ + Физио</h3><p><strong>10.000 тг | 1 сеанс</strong><br>Лечение шейно-воротниковой зоны: избавление от головных болей и напряжения.</p></div>
+        <div class="info-block"><h3>8)Спина + Физио</h3><p><strong>12.000 тг | 1 сеанс</strong><br>Комплексная проработка всей спины с применением физиоаппарата для усиления эффекта.</p></div>
+        <div class="info-block"><h3>9)Антицеллютный ручной</h3><p><strong>200.000 тг | 10 сеансов</strong><br>Скульптурирование фигуры, улучшение качества кожи и борьба с локальными отложениями.</p></div>
+        <div class="info-block"><h3>10)Аппаратная коррекция фигуры</h3><p><strong>220.000 тг | 10 сеансов</strong><br>Интенсивный 3-часовой сеанс: мощное воздействие для быстрого похудения и детокса.</p></div>
+        <div class="info-block"><h3>11)Аппаратный массаж лица</h3><p><strong>150.000 тг | 10 сеансов</strong><br>Стимуляция коллагена, подтяжка овала лица и сияние кожи без уколов.</p></div>
+        <div class="info-block"><h3>12)Миофасциальный массаж</h3><p><strong>200.000 тг | 10 сеансов</strong><br>Глубокая работа с соединительной тканью для восстановления гибкости и легкости движений.</p></div>
+        <div class="info-block"><h3>13)Массаж 5 Континентов</h3><p><strong>35.000 тг | 1 сеанс</strong><br>Элитная техника (120 мин), сочетающая массаж, масла и энергию для полной перезагрузки.</p></div>
+        <div class="info-block"><h3>14)Физио</h3><p><strong>8.000 тг | 1 сеанс</strong><br>Аппаратная процедура для точечного снятия воспалений и ускорения регенерации.</p></div>
+    </div>
+</section>
+
+<section id="booking" style="background: #f9f4eb;">
+    <h2>Записаться на сеанс</h2>
+    <div class="admin-form">
+        <form id="bookingForm">
+            <input type="text" name="name" placeholder="Ваше имя" required>
+            <input type="tel" name="phone" placeholder="+7 (___) ___-__-__" required>
+            <input type="date" name="date" id="datePicker" required>
+            <select name="service" required id="serviceSelect">
+                <option value="" disabled selected>Выберите услугу</option>
+            </select>
+            <div id="priceDisplay" style="text-align: center; margin-bottom: 20px; font-weight: bold; color: var(--gold); display: none; font-size: 1.2rem;">
+                Стоимость: <span id="currentPrice"></span> тг
+            </div>
+            <textarea name="comment" placeholder="Что вас беспокоит? (например: боли в пояснице)" style="width:100%; padding:15px; border-radius:10px; border:1px solid #eee; margin-bottom:20px; font-family:inherit; min-height: 80px;"></textarea>
+            <button type="submit" class="btn" style="width: 100%;">Отправить данные</button>
+        </form>
+        <p id="bookingMsg" style="display:none; text-align: center; color: var(--gold); margin-top: 25px; font-weight: bold;">Заявка отправлена! Мы скоро свяжемся с вами.</p>
     </div>
 </section>
 
 <section id="reviews">
     <h2>Отзывы клиентов</h2>
-    <div class="grid">
-        <div class="info-block"><p>«Золотые руки! Спина как новая. Доверяю на все 100%.»<br><strong>— Алия</strong></p></div>
-        <div class="info-block"><p>«Массаж 5 континентов — это лучшее, что случалось со мной. Рахмет!»<br><strong>— Сауле</strong></p></div>
-        <div class="info-block"><p>«Вожу сына к Гульмире. Она очень чуткая, результаты видим сразу.»<br><strong>— Бауржан</strong></p></div>
-    </div>
-</section>
-
-<section id="booking">
-    <h2>Записаться на сеанс</h2>
-    <div class="admin-form">
-        <form id="bookingForm">
-            <input type="text" name="name" placeholder="Ваше имя" required>
-            <input type="tel" name="phone" placeholder="Ваш телефон" required>
-            <input type="date" name="date" required>
-            <select name="service">
-                <option value="Массаж 5 Континентов">Массаж 5 Континентов</option>
-                <option value="Скульптурный лица">Скульптурный лица</option>
-                <option value="Лечебный массаж">Лечебный массаж</option>
-            </select>
-            <button type="submit" class="btn" style="width: 100%;">Отправить данные</button>
+    <div id="reviewsList" class="grid" style="margin-bottom: 40px;"></div>
+    <div class="admin-form" style="background: #fff;">
+        <h3 style="margin-bottom:20px;">Оставить отзыв</h3>
+        <form id="reviewForm">
+            <input type="text" name="revName" placeholder="Ваше имя" required>
+            <textarea name="revText" placeholder="Ваш отзыв..." required style="width:100%; padding:15px; border-radius:10px; border:1px solid #eee; margin-bottom:20px; height:100px; font-family:inherit;"></textarea>
+            <button type="submit" class="btn" style="width: 100%;">Опубликовать</button>
         </form>
-        <p id="bookingMsg" style="display:none; text-align: center; color: var(--gold); margin-top: 25px;">Заявка отправлена!</p>
-    </div>
-</section>
-
-<section id="contact">
-    <h2>Контакты</h2>
-    <div style="text-align: center;">
-        <p>г. Астана, ул. Мухамедханова 8, ЖК "SARDAR"</p>
-        <p>Тел: <a href="tel:+77016092225">+7 701 609 22 25</a></p>
-        <br>
-        <div style="display: flex; justify-content: center; gap: 20px;">
-            <a href="https://www.instagram.com/gulmira_aktailakovna84?igsh=a2tsN3Q4dWJwdzFy" target="_blank" style="color: #E1306C; font-weight: 700;">INSTAGRAM</a>
-            <a href="https://wa.me/77016092225" target="_blank" style="color: #25D366; font-weight: 700;">WHATSAPP</a>
-        </div>
     </div>
 </section>
 
 <footer style="background: #1a1a1a; padding: 40px 20px; text-align: center;">
-    <a href="admin.html" style="color: #555; text-decoration: none; font-size: 0.9rem; border: 1px solid #333; padding: 8px 15px; border-radius: 5px;">Вход для персонала</a>
+    <p style="color: #666; margin-bottom: 10px;">г. Астана, ул. Мухамедханова 8, ЖК "SARDAR"</p>
+    <a href="admin.html" style="color: #333; text-decoration: none; font-size: 0.7rem;">Вход для персонала</a>
 </footer>
 
 <script type="module" src="script.js"></script>
