--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Гульмира Жанабекова | Эксперт Массажа</title>
+    <title>Гульмира Жанабекова | Профессиональный массаж</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -45,21 +45,79 @@
 </section>
 
 <section id="services">
-    <h2>Услуги</h2>
+    <h2>Услуги и цены</h2>
     <div class="grid">
-        <div class="info-block"><strong>Массаж 5 Континентов</strong><p>Элитная процедура для полной перезагрузки организма.</p></div>
-        <div class="info-block"><strong>Скульптурный массаж лица</strong><p>Ручная пластика и лифтинг-эффект без инъекций.</p></div>
-        <div class="info-block"><strong>Лечебный массаж</strong><p>Устранение болей в спине, шее и пояснице.</p></div>
-        <div class="info-block"><strong>Детский массаж (0+)</strong><p>Профилактика и реабилитация детей любого возраста.</p></div>
+        <div class="info-block">
+            <h3>Детский общий массаж (0-5 лет)</h3>
+            <p><strong>60.000 тг (10 сеансов)</strong><br>Профилактика развития, укрепление мышц. 30 минут.</p>
+        </div>
+        <div class="info-block">
+            <h3>Детский общий массаж (5-10 лет)</h3>
+            <p><strong>80.000 тг (10 сеансов)</strong><br>Коррекция осанки, улучшение тонуса. 45 минут.</p>
+        </div>
+        <div class="info-block">
+            <h3>Детский общий массаж (10-15 лет)</h3>
+            <p><strong>100.000 тг (10 сеансов)</strong><br>Снятие напряжения, поддержка роста. 60 минут.</p>
+        </div>
+        <div class="info-block">
+            <h3>Детский общий массаж (15-18 лет)</h3>
+            <p><strong>150.000 тг (10 сеансов)</strong><br>Глубокая проработка, подготовка к нагрузкам. 90 минут.</p>
+        </div>
+        <div class="info-block">
+            <h3>Женский общий массаж</h3>
+            <p><strong>180.000 тг (10 сеансов)</strong><br>Комплексное расслабление, улучшение состояния кожи. 90 минут.</p>
+        </div>
+        <div class="info-block">
+            <h3>Мужской общий массаж</h3>
+            <p><strong>220.000 тг (10 сеансов)</strong><br>Снятие мышечных зажимов, восстановление после нагрузок. 90 минут.</p>
+        </div>
+        <div class="info-block">
+            <h3>ШВЗ + Физио</h3>
+            <p><strong>10.000 тг (1 сеанс)</strong><br>Реабилитация после травм, улучшение подвижности. 30 минут.</p>
+        </div>
+        <div class="info-block">
+            <h3>Спина + Физио</h3>
+            <p><strong>12.000 тг (1 сеанс)</strong><br>Снятие болей в спине, коррекция позвоночника. 40 минут.</p>
+        </div>
+        <div class="info-block">
+            <h3>Антицеллюлитный ручной</h3>
+            <p><strong>200.000 тг (10 сеансов)</strong><br>Улучшение лимфотока, моделирование контуров. 90 минут.</p>
+        </div>
+        <div class="info-block">
+            <h3>Аппаратная коррекция фигуры</h3>
+            <p><strong>220.000 тг (10 сеансов)</strong><br>Глубокое воздействие на жировую ткань. 180 минут.</p>
+        </div>
+        <div class="info-block">
+            <h3>Аппаратный массаж лица</h3>
+            <p><strong>150.000 тг (10 сеансов)</strong><br>Лифтинг, омоложение, улучшение тонуса. 90 минут.</p>
+        </div>
+        <div class="info-block">
+            <h3>Миофасциальный массаж</h3>
+            <p><strong>200.000 тг (10 сеансов)</strong><br>Работа с глубокими слоями мышц и фасциями. 90 минут.</p>
+        </div>
+        <div class="info-block">
+            <h3>Массаж 5 Континентов</h3>
+            <p><strong>35.000 тг (1 сеанс)</strong><br>Элитный комплекс мировых техник. 120 минут.</p>
+        </div>
+        <div class="info-block">
+            <h3>Физио</h3>
+            <p><strong>8.000 тг (1 сеанс)</strong><br>Физиотерапевтические процедуры. 30 минут.</p>
+        </div>
     </div>
 </section>
 
 <section id="reviews">
     <h2>Отзывы клиентов</h2>
     <div class="grid">
-        <div class="info-block"><p>«Золотые руки! Спина как новая. Доверяю на все 100%.»<br><strong>— Алия</strong></p></div>
-        <div class="info-block"><p>«Массаж 5 континентов — это лучшее, что случалось со мной. Рахмет!»<br><strong>— Сауле</strong></p></div>
-        <div class="info-block"><p>«Вожу сына к Гульмире. Она очень чуткая, результаты видим сразу.»<br><strong>— Бауржан</strong></p></div>
+        <div class="info-block">
+            <p>«Золотые руки! Спина как новая. Доверяю на все 100%.»<br><strong>— Алия</strong></p>
+        </div>
+        <div class="info-block">
+            <p>«Массаж 5 континентов — это лучшее, что случалось со мной. Рахмет!»<br><strong>— Сауле</strong></p>
+        </div>
+        <div class="info-block">
+            <p>«Вожу сына к Гульмире. Она очень чуткая, результаты видим сразу.»<br><strong>— Бауржан</strong></p>
+        </div>
     </div>
 </section>
 
@@ -70,14 +128,26 @@
             <input type="text" name="name" placeholder="Ваше имя" required>
             <input type="tel" name="phone" placeholder="Ваш телефон" required>
             <input type="date" name="date" required>
-            <select name="service">
-                <option value="Массаж 5 Континентов">Массаж 5 Континентов</option>
-                <option value="Скульптурный лица">Скульптурный лица</option>
-                <option value="Лечебный массаж">Лечебный массаж</option>
+            <select name="service" required>
+                <option value="">-- Выберите услугу --</option>
+                <option value="Детский общий массаж (0-5 лет)">Детский общий массаж (0-5 лет) - 60.000 тг</option>
+                <option value="Детский общий массаж (5-10 лет)">Детский общий массаж (5-10 лет) - 80.000 тг</option>
+                <option value="Детский общий массаж (10-15 лет)">Детский общий массаж (10-15 лет) - 100.000 тг</option>
+                <option value="Детский общий массаж (15-18 лет)">Детский общий массаж (15-18 лет) - 150.000 тг</option>
+                <option value="Женский общий массаж">Женский общий массаж - 180.000 тг</option>
+                <option value="Мужской общий массаж">Мужской общий массаж - 220.000 тг</option>
+                <option value="ШВЗ + Физио">ШВЗ + Физио - 10.000 тг</option>
+                <option value="Спина + Физио">Спина + Физио - 12.000 тг</option>
+                <option value="Антицеллюлитный ручной">Антицеллюлитный ручной - 200.000 тг</option>
+                <option value="Аппаратная коррекция фигуры">Аппаратная коррекция фигуры - 220.000 тг</option>
+                <option value="Аппаратный массаж лица">Аппаратный массаж лица - 150.000 тг</option>
+                <option value="Миофасциальный массаж">Миофасциальный массаж - 200.000 тг</option>
+                <option value="Массаж 5 Континентов">Массаж 5 Континентов - 35.000 тг</option>
+                <option value="Физио">Физио - 8.000 тг</option>
             </select>
-            <button type="submit" class="btn" style="width: 100%;">Отправить данные</button>
+            <button type="submit" class="btn" style="width: 100%;">Записаться</button>
         </form>
-        <p id="bookingMsg" style="display:none; text-align: center; color: var(--gold); margin-top: 25px;">Заявка отправлена!</p>
+        <p id="bookingMsg" style="display:none; text-align: center; color: var(--gold); margin-top: 25px;">✅ Заявка отправлена! Мы скоро свяжемся с вами.</p>
     </div>
 </section>
 
